--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -3,7 +3,13 @@ extends layout
 block content
 
   h1 Author: #{author.name}
-  p #{author.date_of_birth} - #{author.date_of_death}
+  if author.date_of_birth
+    | (#{author.date_of_birth_formatted} - 
+    if author.date_of_death
+      | #{author.date_of_death_formatted}
+    else
+      | present
+    | )
   
   div(style='margin-left:20px;margin-top:20px')
 
